--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="/src/main.ts"></script>
+		<script type="module" src="/src/browser.ts"></script>
 	</body>
 </html>
